# knowledgeos

./: .dockerignore  .env.example  README.md  docker-compose.yml
apps/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20260718130000_create_auth_tables.py  20260718132500_create_workspaces_table.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: health.py
apps/backend/app/core/: __init__.py  config.py  lifespan.py  logging.py
apps/backend/app/dependencies/: __init__.py  auth.py  database.py
apps/backend/app/infrastructure/database/: __init__.py  base.py  conventions.py  mixins.py  session.py
apps/backend/app/infrastructure/database/models/: __init__.py
apps/backend/app/modules/: __init__.py
apps/backend/app/modules/auth/api/: router.py
apps/backend/app/modules/auth/application/services/: auth_service.py  security.py
apps/backend/app/modules/auth/infrastructure/models/: __init__.py  refresh_token.py  user.py
apps/backend/app/modules/auth/schemas/: auth.py
apps/backend/app/modules/workspace/api/: router.py
apps/backend/app/modules/workspace/application/services/: workspace_service.py
apps/backend/app/modules/workspace/infrastructure/models/: __init__.py  workspace.py
apps/backend/app/modules/workspace/schemas/: workspace.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_auth.py  test_workspaces.py
infrastructure/docker/backend/: Dockerfile
infrastructure/minio/init/: create-bucket.sh
infrastructure/postgres/init/: 01-pgvector.sql
